ticket1741 fix for looking better on ie

--- a/se-web-ui/src/main/resources/catalog/views/swe/less/gn_view_swe.less
+++ b/se-web-ui/src/main/resources/catalog/views/swe/less/gn_view_swe.less
@@ -413,7 +413,7 @@ body.loggedin-user .header-logout {
 }
 //For map dock
 .geodata-examples-expanded-with-cookie-alert .site-side-map-cont {
-  top: 381px;
+  top: 381.5px;
 }
 .geodata-examples-collapsed-with-cookie-alert .site-side-map-cont {
   top: 175px;
